FILE (GLOB cryptopp_SOURCES "${CMAKE_CURRENT_SOURCE_DIR}/*.cpp")
FILE (GLOB cryptopp_HEADERS "${CMAKE_CURRENT_SOURCE_DIR}/*.h")

IF (MSVC)
#  ADD_DEFINITIONS (-DCRYPTOPP_GENERATE_X64_MASM)
  ADD_DEFINITIONS (-DCRYPTOPP_DISABLE_ASM)
  CMAKE_POLICY(SET CMP0008 NEW)
ENDIF (MSVC)


ADD_LIBRARY (cryptopp SHARED ${cryptopp_SOURCES})
ADD_LIBRARY (cryptopp_static STATIC  ${cryptopp_SOURCES})
SET_TARGET_PROPERTIES(cryptopp_static PROPERTIES OUTPUT_NAME cryptopp)

IF (WIN32)
  TARGET_LINK_LIBRARIES (cryptopp Ws2_32.lib)
  TARGET_LINK_LIBRARIES (cryptopp_static Ws2_32.lib)
ENDIF (WIN32)

IF (MSVC)
  INSTALL (TARGETS cryptopp cryptopp_static
           RUNTIME DESTINATION bin
           LIBRARY DESTINATION bin
           ARCHIVE DESTINATION lib
          )
ELSE (MSVC)
  INSTALL (TARGETS cryptopp cryptopp_static
           RUNTIME DESTINATION bin
           LIBRARY DESTINATION lib 
           ARCHIVE DESTINATION lib
          )
ENDIF (MSVC)

ADD_DEFINITIONS (-DNDEBUG)
IF (APPLE)
  ADD_DEFINITIONS(-DOSX -DCRYPTOPP_DISABLE_ASM)
  SET_TARGET_PROPERTIES(cryptopp PROPERTIES COMPILE_FLAGS "-fPIC -w -finline-functions -O3")
  SET_TARGET_PROPERTIES(cryptopp_static PROPERTIES COMPILE_FLAGS "-w -finline-functions -O3")
ELSEIF (UNIX AND NOT APPLE)
  ADD_DEFINITIONS(-DLINUX)
  SET_TARGET_PROPERTIES(cryptopp PROPERTIES COMPILE_FLAGS "-fPIC -w -pipe -finline-functions -O3")
  SET_TARGET_PROPERTIES(cryptopp_static PROPERTIES COMPILE_FLAGS " -w -pipe -finline-functions -O3")
ELSEIF (WIN32 AND NOT MSVC)
  ADD_DEFINITIONS(-D__MINGW__ -DWIN32 -D_WIN32)
  SET_TARGET_PROPERTIES(cryptopp PROPERTIES COMPILE_FLAGS "-mthreads -w -finline-functions -O3 -D_WIN32_WINNT=0x0501")
  SET_TARGET_PROPERTIES(cryptopp_static PROPERTIES COMPILE_FLAGS "-mthreads -w -finline-functions -O3 -D_WIN32_WINNT=0x0501")
ENDIF(APPLE)

